Optimaze running program with vscode

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_ADDRESS = localhost:5432
-DB_USER = zeerdasTeacher
-DB_PASSWORD = ontheroadtotherich
-DB_NAME = db.golang_services
+DB_USER = learningservice
+DB_PASSWORD = learningservice
+DB_NAME = db.learning_services
 
 JWT_PASSPHRASE = RandomTokens
 JWT_ISSUER = GenerateTokens
